@@ -1,8 +1,10 @@
 package com.objecteffects.reddit.http;
 
 import java.io.IOException;
+import java.net.http.HttpResponse;
 import java.util.Collections;
 import java.util.EnumSet;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
@@ -17,14 +19,14 @@ import com.jayway.jsonpath.spi.json.JacksonJsonProvider;
 import com.jayway.jsonpath.spi.mapper.JacksonMappingProvider;
 import com.objecteffects.reddit.core.RedditGetMethod;
 import com.objecteffects.reddit.core.RedditOAuth;
-import com.objecteffects.reddit.data.Me;
+import com.objecteffects.reddit.data.Friend;
 
 /**
  *
  */
-public class TestGetMethodMeJsonPath {
+public class TestGetMethodFriends {
     final Logger log =
-            LoggerFactory.getLogger(TestGetMethodMeJsonPath.class);
+            LoggerFactory.getLogger(TestGetMethodFriends.class);
 
     private final RedditOAuth redditOAuth =
             new RedditOAuth();
@@ -41,26 +43,42 @@ public class TestGetMethodMeJsonPath {
      * @throws InterruptedException
      */
     @Test
-    public void testGetMethod() throws IOException, InterruptedException {
+    public void testGetMethodFriends()
+            throws InterruptedException, IOException {
         final RedditGetMethod client = new RedditGetMethod();
 
-        final String body =
-                client.getMethod("api/v1/me",
-                        Collections.emptyMap()).body();
+        // doesn't work (ignored) with friends
+        // final Map<String, String> params = Map.of("limit", "15");
 
-        this.log.debug("body: {}", body);
+        final HttpResponse<String> methodResponse = client
+                .getMethod("prefs/friends", Collections.emptyMap());
 
-        final TypeRef<Me> typeRef = new TypeRef<>() {
+        this.log.debug("method response status: {}",
+                Integer.valueOf(methodResponse.statusCode()));
+
+        this.log.debug("method response headers: {}", methodResponse.headers());
+        // this.log.debug("method response body: {}", methodResponse.body());
+
+        decodeBodyJsonPath(methodResponse.body());
+
+        this.redditOAuth.revokeToken();
+    }
+
+    private void decodeBodyJsonPath(final String body) {
+        final String path = "$[0]['data']['children']";
+
+        final TypeRef<List<Friend>> typeRef = new TypeRef<>() {
             // empty
         };
 
         final DocumentContext jsonContext =
                 JsonPath.using(this.conf).parse(body);
 
-        final Me me = jsonContext.read("$", typeRef);
+        final List<Friend> list = jsonContext.read(path, typeRef);
 
-        this.log.debug("me: {}", me);
-
-        this.redditOAuth.revokeToken();
+        for (final Friend friend : list) {
+            this.log.debug("name: {}, karma: {}", friend.getName(),
+                    friend.getKarma());
+        }
     }
 }
